objects/hey__Log_Handler__mdt.object
<CustomObject>
    <fields>
        <fullName>hey__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hey__Logger__c</fullName>
        <label>Logger</label>
        <referenceTo>hey__Logger__mdt</referenceTo>
        <relationshipLabel>Log Handlers</relationshipLabel>
        <relationshipName>Log_Handlers</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>hey__Namespace__c</fullName>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hey__Setting__c</fullName>
        <label>Setting</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hey__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Log Handler</label>
    <pluralLabel>Log Handlers</pluralLabel>
</CustomObject>